--- a/src/client/package.json
+++ b/src/client/package.json
@@ -9,19 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
+    "flowbite": "^1.8.1",
+    "flowbite-react": "^0.6.4",
     "next": "13.5.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-table": "^7.8.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
     "mini-css-extract-plugin": "^2.7.6",
-    "postcss": "^8",
+    "postcss": "^8.4.31",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
