--- a/src/client/package.json
+++ b/src/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@tailwindcss/forms": "^0.5.6",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.4",
     "next": "13.5.4",
